PaymentGateway/Kubernetes/ckobank-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: deployment-ckobank
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-ckobank
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-ckobank
    spec:
      containers:
      - image: 109163296068.dkr.ecr.us-west-2.amazonaws.com/payments-ckobank:latest
        imagePullPolicy: Always
        name: app-ckobank
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: service-ckobank
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-ckobank
