PaymentGateway/Kubernetes/fulfilments-service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: payments
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: deployment-fulfilment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-fulfilment
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-fulfilment
    spec:
      containers:
      - image: 109163296068.dkr.ecr.us-west-2.amazonaws.com/payments-fulfilment:latest
        imagePullPolicy: Always
        name: app-fulfilment
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: service-fulfilment
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-fulfilment
