PaymentGateway/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /process
        pathType: Prefix
        backend:
          service:
            name: service-fulfilment
            port:
              number: 80
      - path: /transactions
        pathType: Prefix
        backend:
          service:
            name: service-ckobank
            port:
              number: 80
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: service-analytics
            port:
              number: 80
